# Custom-Kernel-Learning

./: .gitignore  Cargo.toml  README.md  x86_64-ft_kernel.json
src/: gdt.rs  interrupts.rs  main.rs  memory.rs  serial.rs  vga.rs
