[package]
name = "ft_freestanding"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
x86_64 = "0.15.4"
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"


[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio"]
